[package]
name = "grasshopper"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cryptor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
block-encryption = { git = "https://gitverse.ru/digit4lsh4d0w/block-encryption" }
